# gs3d

./: .gitattributes  .gitignore  README.md  pyproject.toml
capture/: README.md  pyproject.toml
capture/realsense_capture/: __init__.py  app.py  camera.py  gui.py  writer.py
capture/scripts/: check_camera.py
docs/: 3dgs-to-physics-sim-survey.md
recon/: README.md  pyproject.toml
recon/gs3d/: __init__.py  cli.py
recon/scripts/: get_sample.sh  run_pipeline.sh  setup_server.sh
scripts/: check_pycolmap.py  check_view.py  curate_dataset.py  get_sample.sh  introspect_recon.py  run_pipeline.sh  setup_cuda_jit.sh  setup_server.sh
src/gs3d/: __init__.py  cli.py
src/gs3d/capture/: camera.py  check.py  gui.py  writer.py
src/gs3d/recon/: __init__.py  _cuda.py  colmap_sfm.py  dataset.py  depth_init.py  inria.py  model.py  render.py  seg.py  trainer.py  viewer.py
src/gs3d/recon/export/: __init__.py  align.py  clusters.py  env.py  genesis_scene.py  meshing.py  pipeline.py  scale.py  sim_render.py  urdf.py
