[project]
name = "gs3d"
version = "0.1.0"
description = "RealSense D435i capture + gsplat 3D Gaussian Splatting — one project, two subparts (capture / recon)"
readme = "README.md"
requires-python = ">=3.10,<3.12"
# Base deps shared by both subparts. Platform-specific heavy deps live in extras.
dependencies = [
    "numpy<2",
    "opencv-python>=4.8",
]

[project.optional-dependencies]
# Subpart 1 — data acquisition (Windows, where the D435i is attached).
capture = [
    "pyrealsense2>=2.54; sys_platform == 'win32'",
    "PySide6>=6.6; sys_platform == 'win32'",
]
# Subpart 2 — 3D Gaussian Splatting (Ubuntu + NVIDIA GPU).
recon = [
    "torch==2.8.0; sys_platform == 'linux'",
    "gsplat>=1.4.0; sys_platform == 'linux'",
    "pycolmap>=0.6,<0.7; sys_platform == 'linux'",
    # gsplat JIT-compiles its CUDA kernels on first use; these are required for that build.
    "ninja>=1.11; sys_platform == 'linux'",
    "packaging; sys_platform == 'linux'",
    "setuptools; sys_platform == 'linux'",
    "wheel; sys_platform == 'linux'",
    "scikit-learn>=1.3",
    "plyfile>=1.0",
    "imageio[ffmpeg]>=2.31",
    "tqdm>=4.66",
    # Interactive GPU viewer (renders on the server, streams to a browser).
    "viser>=0.2",
    "nerfview>=0.0.3",
    "matplotlib",  # nerfview render panel (undeclared by nerfview)
    "splines",     # nerfview camera paths (undeclared by nerfview)
]

[project.scripts]
gs3d = "gs3d.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gs3d"]

[tool.uv]
# Resolve the single universal lock for just the two target platforms.
environments = ["sys_platform == 'win32'", "sys_platform == 'linux'"]

# PyTorch CUDA 12.8 wheels (Linux). cu128 ships sm_120 kernels for Blackwell
# consumer GPUs (e.g. RTX 50-series); still runs on the H20 (driver 535) via
# CUDA minor-version compatibility. gsplat has no cu128 prebuilt wheel, so it
# JIT-compiles its kernels and needs a matching CUDA 12.8 toolkit (see README).
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
