[project]
name = "realsense-capture"
version = "0.1.0"
description = "PySide6 GUI to capture RGB(+depth) image sets from an Intel RealSense D435i for 3D Gaussian Splatting"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pyrealsense2>=2.54",
    "PySide6>=6.6",
    "numpy>=1.24",
    "opencv-python>=4.8",
]

[project.scripts]
realsense-capture = "realsense_capture.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["realsense_capture"]
