[project]
name = "gs3d"
version = "0.1.0"
description = "COLMAP SfM (pycolmap) + gsplat 3D Gaussian Splatting pipeline for RealSense captures"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch==2.5.1",
    "gsplat>=1.4.0",
    "ninja>=1.11",
    "pycolmap>=0.6,<0.7",
    "numpy<2",
    "opencv-python>=4.8",
    "scikit-learn>=1.3",
    "plyfile>=1.0",
    "imageio[ffmpeg]>=2.31",
    "tqdm>=4.66",
]

[project.scripts]
gs3d = "gs3d.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gs3d"]

# PyTorch CUDA 12.4 wheels (compatible with the H20's driver 535).
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
